xwayland: Update clipboard when active window changes

Amends 947d2c5ad0746d807b04f6bb382e1d4ddb1b7f29.

The clipboard was decoupled from active window changes in order to fix
copy-pasting not working from X to Wayland clients.

With that approach, if a wayland client sets new clipboard contents, kwin
will update the CLIPBOARD selection immediately but also expect that
clients won't access the selection until they are focused.

WINE breaks that assumption. It wants to access the selection as soon as
SelectionNotify events arrive, it doesn't access it later when user
presses Ctrl-V in a focused window.

This change restores focus tracking bits but with a few twists: first,
xcb_selection_set_owner() to unset the owner is no longer nuclear, i.e.
kwin won't overwrite selection owner if somebody already claimed it;
second, the X source won't be nuked when we unset the Wayland proxy
source object.

BUG: 511063
(cherry picked from commit bb6e9d3ec1f637d9af00b7f47962c84eb18b817b)